Initial StarFive VisionFiveV1 config files

--- a/config/targets.conf
+++ b/config/targets.conf
@@ -731,6 +731,10 @@ rockpi-s                  edge            jammy       minimal                  s
 rockpi-s                  edge            bullseye    minimal                  stable         yes
 
 
+# StarFive-VisionFiveV1
+starfive-visionfive-v1    edge            bullseye    minimal                  beta           yes
+
+
 # Tinkerboard
 tinkerboard               current         bullseye    cli                      stable         yes
 tinkerboard               current         jammy       cli                      stable         adv
