--- a/config/boards/starfive-visionfive-v1.conf
+++ b/config/boards/starfive-visionfive-v1.conf
@@ -1,8 +1,5 @@
 # SiFive U74 dual core SoC
 BOARD_NAME="StarFive VisionFiveV1"
-BOARDFAMILY="starfive"
-BOOTCONFIG="starfive-visionfivev1_defconfig"
-KERNEL_TARGET="current,edge"
-HAS_VIDEO_OUTPUT="no"
-BOOTBRANCH_BOARD="tag:v2022.04"
-BOOTPATCHDIR="v2022.07"
+BOARDFAMILY="visionfive"
+KERNEL_TARGET="legacy,current"
+HAS_VIDEO_OUTPUT="yes"
