remove needless patches

--- a/config/boards/starfive-visionfive-v1.conf
+++ b/config/boards/starfive-visionfive-v1.conf
@@ -3,3 +3,4 @@ BOARD_NAME="StarFive VisionFiveV1"
 BOARDFAMILY="visionfive"
 KERNEL_TARGET="legacy,current"
 HAS_VIDEO_OUTPUT="yes"
+SERIALCON="ttyS0"
