--- a/config/sources/families/visionfive.conf
+++ b/config/sources/families/visionfive.conf
@@ -1,5 +1,7 @@
 ARCH=riscv64
 KERNELSOURCE='https://github.com/starfive-tech/linux.git'
+KERNELDIR='linux'
+UBOOT_USE_GCC="none"
 # TODO
 # BOOTSCRIPT='boot-odroid-xu4.ini:boot.ini'
 # BOOTDIR='u-boot-odroidxu'
